--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,7 @@ h1, h2, h3, h4 {
   padding: 3rem 0 0;
 }
 .score-tbl {
+  height: 100%;
   margin-bottom: 5px;
 }
 .score-tbl th {
@@ -49,25 +50,28 @@ h1, h2, h3, h4 {
 }
 .score-tbl thead tr:nth-child(n+2) td:first-child {
   text-align: center;
-  width: 25px;
+  width: 3%;
 }
 .score-tbl thead tr:nth-child(n+2) td:nth-child(2) {
-  min-width: 225px;
+  width: 10%;
 }
 .score-tbl thead tr:nth-child(n+2) td:nth-child(3) {
   text-align: center;
-  width: 45px;
+  width: 3%;
 }
 .score-tbl thead tr:nth-child(n+2) td:nth-child(n+4) {
   text-align: center;
-  min-width: 66px;
-  width: 66px;
+  min-width: 4%;
+  width: 4%;
 }
 .score-tbl tbody tr:nth-child(even) {
   background-color: #f9f9f9;
 }
 .score-tbl tbody td {
+  height: 100%;
+  padding: 0;
   position: relative;
+  top: 0;
 }
 .score-tbl tbody td div {
   -webkit-box-align: center;
@@ -84,6 +88,14 @@ h1, h2, h3, h4 {
 .score-tbl tbody td div:not(:last-child) {
   border-bottom: 1px dashed #c3c3c3;
 }
+.score-tbl tbody td div.score-box {
+  height: 100%;
+  position: relative;
+  width: 100%;
+}
+.score-tbl tbody td div.score-diamond {
+  padding: 0;
+}
 .score-tbl tbody td:first-child div, .score-tbl tbody td:nth-child(3) div {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -96,6 +108,21 @@ h1, h2, h3, h4 {
 }
 .score-tbl tbody td:nth-child(n+4) {
   vertical-align: middle;
+}
+.score-tbl tbody td.score-zoom .score-box {
+  background: #fff;
+  border: 1px solid #dee2e6;
+  left: 0;
+  position: absolute;
+  top: 0;
+  -webkit-transform: scale(1.5) translate(16px, 10px);
+          transform: scale(1.5) translate(16px, 10px);
+  z-index: 9;
+}
+.score-tbl tbody td.score-zoom .score-box .btn-close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 .score-tbl tfoot tr td {
   padding: 0;
@@ -161,7 +188,7 @@ h1, h2, h3, h4 {
   grid-template-rows: repeat(2, 1fr);
   grid-row-gap: 0;
   grid-column-gap: 0;
-  width: 64px;
+  width: 100%;
 }
 .score .grid.grid-no-border {
   border-left: none;
@@ -181,7 +208,7 @@ h1, h2, h3, h4 {
       -ms-flex-pack: center;
           justify-content: center;
   text-transform: uppercase;
-  width: 33px;
+  width: auto;
 }
 .score .grid-col:first-child {
   border-bottom: 1px dashed #c3c3c3;
@@ -198,6 +225,19 @@ h1, h2, h3, h4 {
 }
 .score .grid-totals .grid-col {
   width: 38px;
+}
+.score .btn-close {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ed0d56'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+  display: none;
+  height: 4px;
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  width: 4px;
+}
+.score .btn-close:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 /* Pitchers */
@@ -274,4 +314,8 @@ h1, h2, h3, h4 {
   border-color: #c3c3c3;
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+.pg-container {
+  margin: 0 2rem;
 }
