--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,21 @@ h1, h2, h3, h4 {
   padding: 0 0.5rem;
   vertical-align: bottom;
 }
+.score-tbl thead tr:first-child th [contenteditable=true]:active,
+.score-tbl thead tr:first-child th [contenteditable=true]:focus {
+  background-color: #fdfeff;
+  border-bottom: 1px solid #14477a;
+  outline: 0;
+}
+.score-tbl thead tr:first-child th [contenteditable=true]:active::-moz-selection, .score-tbl thead tr:first-child th [contenteditable=true]:focus::-moz-selection {
+  background-color: rgba(20, 71, 122, 0.5);
+  color: #fff;
+}
+.score-tbl thead tr:first-child th [contenteditable=true]:active::selection,
+.score-tbl thead tr:first-child th [contenteditable=true]:focus::selection {
+  background-color: rgba(20, 71, 122, 0.5);
+  color: #fff;
+}
 .score-tbl thead tr:first-child span {
   display: block;
   text-align: right;
@@ -93,8 +108,26 @@ h1, h2, h3, h4 {
   position: relative;
   width: 100%;
 }
+.score-tbl tbody td div.score-box canvas {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 8;
+}
 .score-tbl tbody td div.score-diamond {
+  border-bottom: 1px solid #c3c3c3;
   padding: 0;
+}
+.score-tbl tbody td div.score-diamond-hdr {
+  border-bottom: none;
+  display: none;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 3px 3px 0 4px;
+  z-index: 9;
 }
 .score-tbl tbody td:first-child div, .score-tbl tbody td:nth-child(3) div {
   -webkit-box-pack: center;
@@ -105,6 +138,20 @@ h1, h2, h3, h4 {
 }
 .score-tbl tbody td:nth-child(-n+3) {
   padding: 0;
+}
+.score-tbl tbody td:nth-child(-n+3) [contenteditable=true]:active,
+.score-tbl tbody td:nth-child(-n+3) [contenteditable=true]:focus {
+  background-color: #fdfeff;
+  outline: 1px solid #14477a;
+}
+.score-tbl tbody td:nth-child(-n+3) [contenteditable=true]:active::-moz-selection, .score-tbl tbody td:nth-child(-n+3) [contenteditable=true]:focus::-moz-selection {
+  background-color: rgba(20, 71, 122, 0.5);
+  color: #fff;
+}
+.score-tbl tbody td:nth-child(-n+3) [contenteditable=true]:active::selection,
+.score-tbl tbody td:nth-child(-n+3) [contenteditable=true]:focus::selection {
+  background-color: rgba(20, 71, 122, 0.5);
+  color: #fff;
 }
 .score-tbl tbody td:nth-child(n+4) {
   vertical-align: middle;
@@ -119,7 +166,7 @@ h1, h2, h3, h4 {
           transform: scale(1.5) translate(16px, 10px);
   z-index: 9;
 }
-.score-tbl tbody td.score-zoom .score-box .btn-close {
+.score-tbl tbody td.score-zoom .score-box .score-diamond-hdr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,6 +189,7 @@ h1, h2, h3, h4 {
   border-radius: 2px;
 }
 .score-hdr {
+  border-bottom: 1px solid transparent;
   font-weight: 400;
 }
 .score-diamond {
@@ -151,6 +199,9 @@ h1, h2, h3, h4 {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   width: 35px;
+}
+.score-diamond.diamond-fill {
+  background-color: #000;
 }
 .score .col-totals {
   -webkit-box-align: center;
@@ -226,18 +277,44 @@ h1, h2, h3, h4 {
 .score .grid-totals .grid-col {
   width: 38px;
 }
-.score .btn-close {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ed0d56'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
-  display: none;
-  height: 2px;
+.score-diamond-hdr {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  left: 0;
   position: absolute;
-  right: 3px;
-  top: 3px;
-  width: 2px;
+  top: 0;
+  width: 100%;
 }
-.score .btn-close:focus {
+.score-diamond-hdr button {
+  background-color: transparent;
+  background-position: left top;
+  background-repeat: no-repeat;
+  border: none;
+  border-radius: 0.375rem;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 9px;
+  opacity: 1;
+  padding: 0;
+  width: 9px;
+}
+.score-diamond-hdr button:hover {
+  opacity: 0.75;
+}
+.score-diamond-hdr button:focus {
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+.score-diamond-hdr button.btn-close {
+  background-image: url("../../assets/img/icon-close.svg");
+  background-size: 9px 9px;
+}
+.score-diamond-hdr button.btn-reset {
+  background-image: url("../../assets/img/icon-reset.svg");
+  background-size: 8px 8px;
+  height: 8px;
+  width: 8px;
 }
 
 /* Pitchers */
@@ -275,6 +352,9 @@ h1, h2, h3, h4 {
 }
 .pitchers-tbl thead tr th:nth-child(3) {
   width: 30px;
+}
+.pitchers-tbl tbody tr td {
+  height: 34px;
 }
 .pitchers-tbl tbody tr td:nth-child(3), .pitchers-tbl tbody tr td:nth-child(n+4) {
   text-align: center;
