--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,7 @@ h1, h2, h3, h4 {
   width: 3%;
 }
 .score-tbl thead tr:nth-child(n+2) td:nth-child(2) {
+  min-width: 165px;
   width: 10%;
 }
 .score-tbl thead tr:nth-child(n+2) td:nth-child(3) {
@@ -75,8 +76,8 @@ h1, h2, h3, h4 {
   width: 3%;
 }
 .score-tbl thead tr:nth-child(n+2) td:nth-child(n+4) {
-  text-align: center;
   min-width: 4%;
+  text-align: center;
   width: 4%;
 }
 .score-tbl tbody tr:nth-child(even) {
@@ -84,6 +85,7 @@ h1, h2, h3, h4 {
 }
 .score-tbl tbody td {
   height: 100%;
+  min-width: 76px;
   padding: 0;
   position: relative;
   top: 0;
