--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,12 +161,17 @@ h1, h2, h3, h4 {
 .score-tbl tbody td.score-zoom .score-box {
   background: #fff;
   border: 1px solid #dee2e6;
-  left: 0;
+  left: -6px;
   position: absolute;
-  top: 0;
+  top: 1px;
   -webkit-transform: scale(1.5) translate(16px, 10px);
           transform: scale(1.5) translate(16px, 10px);
   z-index: 9;
+}
+@media screen and (min-width: 768px) {
+  .score-tbl tbody td.score-zoom .score-box {
+    left: -2px;
+  }
 }
 .score-tbl tbody td.score-zoom .score-box .score-diamond-hdr {
   display: -webkit-box;
