--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -48,7 +48,7 @@
                 td {
                     &:first-child {
                         text-align: center;
-                        width: 3%;
+                        width: 2%;
                     }
 
                     &:nth-child(2) {
@@ -58,13 +58,13 @@
 
                     &:nth-child(3) {
                         text-align: center;
-                        width: 3%;
+                        width: 2%;
                     }
 
                     &:nth-child(n+4) {
-                        min-width: 4%;
+                        min-width: 90px;
                         text-align: center;
-                        width: 4%;
+                        width: 6%;
                     }
                 }
             }
@@ -85,18 +85,9 @@
                 top: 0;
 
                 div {
-                    align-items: center;
-                    display: flex;
-                    justify-content: flex-start; 
-                    padding: 0.3rem 0.5rem;
-                    
-
-                    &:not(:last-child) {
-                        border-bottom: 1px dashed #c3c3c3;
-                    }
-
                     &.score-box {
                         height: 100%;
+                        padding: 0.3rem 0.5rem;
                         position: relative;
                         width: 100%;
 
@@ -146,6 +137,14 @@
                             color: #fff;
                         }
                     }
+
+                    div {
+                        padding: 0.3rem 0.5rem;
+
+                        &:not(:last-child) {
+                            border-bottom: 1px dashed #c3c3c3;
+                        }
+                    }
                 }
 
                 &:nth-child(n+4) {
@@ -169,6 +168,10 @@
                         .score-diamond-hdr {
                             display: flex;
                         }
+                    }
+
+                    .btn-zoom {
+                        display: none;
                     }
                 }
             }
@@ -217,6 +220,12 @@
     &-hdr {
         border-bottom: 1px solid transparent;
         font-weight: 400;
+    }
+
+    &-box {
+        align-items: center;
+        display: flex;
+        justify-content: center;
     }
 
     &-diamond {
@@ -342,6 +351,63 @@
                 width: 8px;            
             }
         }
+    }
+
+    &-call {
+        align-items: flex-start;
+        bottom: 4px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        left: 4px;
+        position: absolute;
+        z-index: 8;
+
+        &-row {
+            align-items: flex-start; 
+            display: flex; 
+            
+            &.row-balls {
+                margin-bottom: 1px;              
+            }
+        }
+
+        &-box {
+            border: 1px solid #c3c3c3;
+            height: 7px;
+            margin: 0 1px 0 0;
+            width: 7px;
+
+            &.box-filled {
+                background-color: #b4b4b4;
+            }
+        }
+    }
+
+    .btn-zoom {
+        background-color: transparent;
+        background-image: url("../../assets/img/icon-zoom.svg"); 
+        background-position: left top;
+        background-repeat: no-repeat;
+        background-size: 12px 12px;
+        border: none;
+        box-sizing: content-box;
+        cursor: pointer;
+        height: 12px;
+        padding: 0;
+        position: absolute; 
+        right: 5px;
+        top: 5px;
+        width: 12px;
+        z-index: 8;
+
+        &:hover {
+            opacity: .75;
+        }
+
+        &:focus {
+            box-shadow: none;
+        }     
     }
 }
 
