--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,11 +153,11 @@ h1, h2, h3, h4 {
 .score-tbl tbody td.score-zoom .score-box {
   background: #fff;
   border: 1px solid #dee2e6;
+  height: 104px;
   left: -6px;
   position: absolute;
   top: 1px;
-  -webkit-transform: scale(1.5) translate(16px, 10px);
-          transform: scale(1.5) translate(16px, 10px);
+  width: 134px;
   z-index: 9;
 }
 @media screen and (min-width: 768px) {
@@ -169,6 +169,14 @@ h1, h2, h3, h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+.score-tbl tbody td.score-zoom .score-box .score-diamond {
+  height: 52px;
+  width: 52px;
+}
+.score-tbl tbody td.score-zoom .score-box .score-call-box {
+  height: 10px;
+  width: 10px;
 }
 .score-tbl tbody td.score-zoom .btn-zoom {
   display: none;
@@ -221,11 +229,11 @@ h1, h2, h3, h4 {
 }
 .score-diamond {
   border: 1px solid #c3c3c3;
-  height: 35px;
+  height: 38px;
   margin: 0 auto;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
-  width: 35px;
+  width: 38px;
 }
 .score-diamond.diamond-fill {
   background-color: #000;
@@ -318,13 +326,13 @@ h1, h2, h3, h4 {
   background-position: left top;
   background-repeat: no-repeat;
   border: none;
-  border-radius: 0.375rem;
+  border-radius: 0;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
-  height: 9px;
+  height: 12px;
   opacity: 1;
   padding: 0;
-  width: 9px;
+  width: 12px;
 }
 .score-diamond-hdr button:hover {
   opacity: 0.75;
@@ -335,13 +343,13 @@ h1, h2, h3, h4 {
 }
 .score-diamond-hdr button.btn-close {
   background-image: url("../../assets/img/icon-close.svg");
-  background-size: 9px 9px;
+  background-size: 12px 12px;
 }
 .score-diamond-hdr button.btn-reset {
   background-image: url("../../assets/img/icon-reset.svg");
-  background-size: 8px 8px;
-  height: 8px;
-  width: 8px;
+  background-size: 12px 12px;
+  height: 12px;
+  width: 12px;
 }
 .score-call {
   -webkit-box-align: start;
