--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -1,7 +1,7 @@
 /* Scorecard */
 
 .score {
-    padding: 3rem 0 0; 
+    padding: 5px 0; 
 
     &-tbl {
         height: 100%;
@@ -156,15 +156,11 @@
                         background: #fff;
                         border: 1px solid #dee2e6;
                         height: 104px;
-                        left: -6px;
+                        left: -1px;
                         position: absolute;
-                        top: 1px;
+                        top: -1px;
                         width: 134px;
                         z-index: 9;
-
-                        @include mq($bp-md) {
-                            left: -2px;
-                        }
 
                         .score-diamond-hdr {
                             display: flex;
