--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@ h1, h2, h3, h4 {
 
 /* Scorecard */
 .score {
-  padding: 3rem 0 0;
+  padding: 5px 0;
 }
 .score-tbl {
   height: 100%;
@@ -154,16 +154,11 @@ h1, h2, h3, h4 {
   background: #fff;
   border: 1px solid #dee2e6;
   height: 104px;
-  left: -6px;
+  left: -1px;
   position: absolute;
-  top: 1px;
+  top: -1px;
   width: 134px;
   z-index: 9;
-}
-@media screen and (min-width: 768px) {
-  .score-tbl tbody td.score-zoom .score-box {
-    left: -2px;
-  }
 }
 .score-tbl tbody td.score-zoom .score-box .score-diamond-hdr {
   display: -webkit-box;
@@ -508,5 +503,5 @@ h1, h2, h3, h4 {
 }
 
 .pg-container {
-  margin: 0 2rem;
+  margin: 0 5px;
 }
