--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -39,6 +39,22 @@
                     text-align: right;
                     width: 100%;
                 }
+
+                th {
+                    tr {                       
+                        &:first-child {
+                            width: 76px;
+                        }
+
+                        &:nth-child(2) {
+                            width: 182px;
+                        }
+
+                        &:nth-child(3) {
+                            width: 76px;
+                        }
+                    }
+                }
             }
 
             &:nth-child(n+2) {
@@ -48,17 +64,17 @@
                 td {
                     &:first-child {
                         text-align: center;
-                        width: 2%;
+                        width: 76px;
                     }
 
                     &:nth-child(2) {
                         min-width: 165px;
-                        width: 10%;
+                        width: 182px;
                     }
 
                     &:nth-child(3) {
                         text-align: center;
-                        width: 2%;
+                        width: 76px;
                     }
 
                     &:nth-child(n+4) {
@@ -94,6 +110,7 @@
                         canvas {
                             height: 100%;
                             left: 0;
+                            pointer-events: none;
                             position: absolute;
                             top: 0;
                             width: 100%;
@@ -179,6 +196,10 @@
 
                     .btn-zoom {
                         display: none;
+                    }
+
+                    canvas {
+                        pointer-events: initial !important;
                     }
                 }
             }
