--- a/assets/css/sass/layout/_page.scss
+++ b/assets/css/sass/layout/_page.scss
@@ -2,4 +2,43 @@
     &-container {
         margin: 0 5px;
     }
+
+    &-row {
+        --bs-gutter-x: 1.5rem;
+        --bs-gutter-y: 0;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: calc(-1 * var(--bs-gutter-y));
+        margin-right: calc(-.5 * var(--bs-gutter-x));
+        margin-left: calc(-.5 * var(--bs-gutter-x));
+
+        >* {
+            flex-shrink: 0;
+            margin-top: var(--bs-gutter-y);
+            max-width: 100%;
+            padding-right: calc(var(--bs-gutter-x) * .5);
+            padding-left: calc(var(--bs-gutter-x) * .5);
+            width: 100%;
+
+            &.col-2 {
+                flex: 0 0 auto;
+                width: 16.66666667%;
+            }
+
+            &.col-4 {
+                flex: 0 0 auto;
+                width: 33.33333333%;
+            }
+
+            &.col-8 {
+                flex: 0 0 auto;
+                width: 66.66666667%;
+            }
+
+            &.col-10 {
+                flex: 0 0 auto;
+                width: 83.33333333%;
+            }
+        }
+    }
 }
