Updated the default score card content

--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -103,7 +103,7 @@
                 div {
                     &.score-box {
                         height: 100%;
-                        padding: 0.3rem 0.5rem;
+                        padding: 1rem 0.5rem;
                         position: relative;
                         width: 100%;
 
@@ -143,6 +143,7 @@
 
                 &:nth-child(-n+3) {
                     padding: 0;
+                    vertical-align: middle;
 
                     [contenteditable="true"]:active,
                     [contenteditable="true"]:focus {
@@ -476,12 +477,12 @@
 
                     &:first-child,
                     &:nth-child(n+4) {
+                        min-width: 25px;
                         text-align: center;
-                        width: 25px;
                     }
 
                     &:nth-child(3) {
-                        width: 30px; 
+                        min-width: 30px; 
                     }
                 }
             }
@@ -502,6 +503,10 @@
 
                 td {
                     height: 34px;
+
+                    &:first-child {
+                        text-align: center;
+                    }
 
                     &:nth-child(3),
                     &:nth-child(n+4) {
