Added shadow to active score box

--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -173,6 +173,7 @@
                     .score-box {
                         background: #fff;
                         border: 1px solid #dee2e6;
+                        box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.15);
                         height: 104px;
                         left: -1px;
                         position: absolute;
