--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,6 +164,8 @@ h1, h2, h3, h4 {
 .score-tbl tbody td.score-zoom .score-box {
   background: #fff;
   border: 1px solid #dee2e6;
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.15);
   height: 104px;
   left: -1px;
   position: absolute;
