--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -186,6 +186,10 @@ h1, h2, h3, h4 {
   height: 10px;
   width: 10px;
 }
+.score-tbl tbody td.score-zoom .score-box .score-btns {
+  display: block;
+  z-index: 9;
+}
 .score-tbl tbody td.score-zoom .btn-zoom {
   display: none;
 }
@@ -361,6 +365,32 @@ h1, h2, h3, h4 {
   background-size: 12px 12px;
   height: 12px;
   width: 12px;
+}
+.score .score-btns {
+  bottom: 0;
+  display: none;
+  position: absolute;
+  right: 5px;
+}
+.score .score-btns button {
+  background-color: transparent;
+  background-position: left top;
+  background-repeat: no-repeat;
+  background-size: 12px 12px;
+  border: none;
+  border-radius: 0;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 12px;
+  opacity: 1;
+  padding: 0;
+  width: 12px;
+}
+.score .score-btns button.btn-add {
+  background-image: url("../../assets/img/icon-add.svg");
+}
+.score .score-btns button.btn-remove {
+  background-image: url("../../assets/img/icon-remove.svg");
 }
 .score-call {
   -webkit-box-align: start;
