--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -504,7 +504,7 @@
             width: 7px;
 
             &.box-filled {
-                background-color: #b4b4b4;
+                background-color: #000;
             }
         }
     }
