--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -110,7 +110,7 @@
                         canvas {
                             height: 100%;
                             left: 0;
-                            pointer-events: none;
+                          //  pointer-events: none;
                             position: absolute;
                             top: 0;
                             width: 100%;
@@ -127,7 +127,7 @@
                         border-bottom: none;
                         display: none;
                         justify-content: space-between;
-                        padding: 3px 3px 0 4px;
+                        padding: 4px 3px 0 4px;
                         z-index: 9;
                     }
                 }
@@ -174,11 +174,11 @@
                         background: #fff;
                         border: 1px solid #dee2e6;
                         box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.15);
-                        height: 104px;
+                        height: 116.42px;
                         left: -1px;
                         position: absolute;
                         top: -1px;
-                        width: 134px;
+                        width: 150px;
                         z-index: 9;
 
                         .score-diamond-hdr {
@@ -186,13 +186,13 @@
                         }
 
                         .score-diamond {
-                            height: 52px;
-                            width: 52px;
+                            height: 60px;
+                            width: 60px;
                         }
 
                         .score-call-box {
-                            height: 10px;
-                            width: 10px;
+                            height: 12px;
+                            width: 12px;
                         }
 
                         .score-btns,
@@ -206,9 +206,9 @@
                         display: none;
                     }
 
-                    canvas {
-                        pointer-events: initial !important;
-                    }
+                    // canvas {
+                    //     pointer-events: initial !important;
+                    // }
                 }
 
                 &.oneb {
@@ -403,9 +403,9 @@
 
             &.btn-reset {
                 background-image: url("../../assets/img/icon-reset.svg"); 
-                background-size: 12px 12px;
-                height: 12px;
-                width: 12px;            
+                background-size: 13px 13px;
+                height: 13px;
+                width: 13px;            
             }
         }
     }
