--- a/assets/css/sass/components/_score.scss
+++ b/assets/css/sass/components/_score.scss
@@ -220,7 +220,9 @@
 
                 &.twob {
                     .score-diamond {
+                        border-right-color: #000;
                         border-top-color: #000;
+                        border-right-width: 3px;
                         border-top-width: 3px;
                     }
                 }
@@ -228,7 +230,11 @@
                 &.threeb {
                     .score-diamond {
                         border-left-color: #000;
+                        border-right-color: #000;
+                        border-top-color: #000;
                         border-left-width: 3px;
+                        border-right-width: 3px;
+                        border-top-width: 3px;
                     }
                 }
             }
